[#68599042] Fix Read more buttons cut off

--- a/frontend/app/styles/components/_pagination.scss
+++ b/frontend/app/styles/components/_pagination.scss
@@ -76,7 +76,7 @@ ul.pagination-articles {
       .block {
         .headline {
           bottom: 42px;
-          height: 41px;
+          height: 57px;
           font-size: 1.2em;
           line-height: 1em;
           overflow: hidden;
@@ -219,15 +219,21 @@ pagination {
     &.press-items, &.blog-items {
       li {
         .block {
-          .headline {
-            height: auto;
-            overflow: visible;
-          }
           .date {
             position: static;
             font-size: 11px;
             font-weight: bold;
             padding: 0 10px;
+          }
+        }
+      }
+    }
+    &.blog-items {
+      li {
+        .block {
+          .headline {
+            height: auto;
+            overflow: visible;
           }
         }
       }
