--- a/www/assets/styles/wysiwyg.css
+++ b/www/assets/styles/wysiwyg.css
@@ -2112,7 +2112,7 @@ ul.pagination-articles {
         -webkit-font-smoothing: antialiased; }
   ul.pagination-articles.press-items li .block .headline {
     bottom: 42px;
-    height: 41px;
+    height: 57px;
     font-size: 1.2em;
     line-height: 1em;
     overflow: hidden;
@@ -2215,14 +2215,14 @@ pagination {
         ul.pagination-articles li .block .read-more {
           font-size: 11px;
           bottom: -4px; }
-    ul.pagination-articles.press-items li .block .headline, ul.pagination-articles.blog-items li .block .headline {
-      height: auto;
-      overflow: visible; }
     ul.pagination-articles.press-items li .block .date, ul.pagination-articles.blog-items li .block .date {
       position: static;
       font-size: 11px;
       font-weight: bold;
       padding: 0 10px; }
+    ul.pagination-articles.blog-items li .block .headline {
+      height: auto;
+      overflow: visible; }
     ul.pagination-articles.desktop {
       display: none; }
     ul.pagination-articles.tablet {
